# rag-chat

./: .gitignore  Dockerfile  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
src/agent/: rag_agent.py
src/core/: config.py
src/utils/: document_handler.py
templates/: chat.html
tests/: conftest.py  test_config.py  test_main.py
